# teste_dev

./: .gitignore
app/: consumers.py  main.py
app/router/: rabbit.py
app/schemas/: rabbit_schemas.py
app/testes/: conftest.py  test_app.py
config/: docker-compose.yml  dockerfile  pyproject.toml
