[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Lucas <65248330+lucasp165@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Stack moderno (Pydantic v2)
fastapi = "0.115.5"
starlette = "0.41.3"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
uvicorn = {extras = ["standard"], version = "0.30.6"}
anyio = "4.6.2.post1"
typing-extensions = ">=4.12.2"

SQLAlchemy = ">=2.0.22"
asyncpg = "^0.29.0"      
passlib = "^1.7.4"
pytz = "^2024.1"
cryptography = "^43.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
email-validator = ">=2.2.0"
python-dotenv = "^1.0.1"
aio-pika = "^9.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
